Refs #140518 - Search input - fix close button spacing.

--- a/src/SearchBlock/styles.less
+++ b/src/SearchBlock/styles.less
@@ -478,7 +478,6 @@ div#page-document {
           margin-left: auto;
 
           i.close.icon {
-            margin-right: 0.5em !important;
             color: @sf-azure;
           }
 
